# pga-skinning

./: .gitignore  CMakeLists.txt  gen_plots.plt  gen_plots.py
base/: benchmark.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
data/models/: candywrap.gltf  candywrap360.gltf  jointbulge.gltf
data/shaders/: compileshaders.py
data/shaders/bis/: skinnedmodel.frag.spv  skinnedmodel.vert  skinnedmodel.vert.spv
data/shaders/dqs/: skinnedmodel.frag  skinnedmodel.vert  skinnedmodel.vert.spv
data/shaders/gltfskinning/: skinnedmodel.vert  skinnedmodel.vert.spv
data/shaders/lbs/: skinnedmodel.vert
data/shaders/pgacayley/: skinnedmodel.vert  skinnedmodel.vert.spv
data/shaders/pgaskinning/: skinnedmodel.frag  skinnedmodel.vert  skinnedmodel.vert.spv
examples/: CMakeLists.txt
examples/bis/: bis.cpp
examples/common/: mesh_stats.hpp
examples/dqs/: dqs.cpp  dqs.h
examples/gltfskinning/: gltfskinning.cpp  gltfskinning.h
examples/lbs/: lbs.cpp  lbs.h
examples/pga_test/: pga_test.cpp
examples/pgacayley/: pgacayley.cpp  pgacayley.h
examples/pgaskinning/: pgaskinning.cpp  pgaskinning.h
